--- a/docs/找工作准备/投递/常用内容.md
+++ b/docs/找工作准备/投递/常用内容.md
@@ -57,8 +57,8 @@ GPA: 3.38
 
 本人工作：
 1. 本人独自负责整个网站平台的设计研发，使用Spring Security实现权限控制，从而实现多重角色的权限管理，并使用前缀树进行敏感词过滤，使用AOP记录日志，实现统一的日志记录和异常处理。
-2. 使用Redis的Set、ZSet数据结构实现点赞和关注功能，使用Kafka实现异步的站内通知，使用ElasticSearch实现帖子的全文搜索，准确匹配搜索结果，并高亮显示关键词。
-3. 使用Quartz定时计算帖子的热度分数、定时清理垃圾文件，使用Caffeine和Redis实现两级缓存，并优化热门帖子访问，使用HyperLogLog、Bitmap分别实现对UA、DAU的统计。
+2. 使用Redis的Set、ZSet数据结构实现任务状态记录、帖子点赞和关注功能，使用Kafka实现异步的站内通知，使用ElasticSearch实现任务和帖子的全文搜索，准确匹配搜索结果，并高亮显示关键词。
+3. 使用Quartz定时修改任务状态、计算帖子热度分数、定时清理垃圾文件，使用Caffeine和Redis实现两级缓存，并优化热门帖子访问，使用HyperLogLog、Bitmap分别实现对UA、DAU的统计。
 4. 本人同时负责移动端（Android）的设计与开发，使用MySQL进行数据管理，使用 xml 及开源库 XUI 进行界面设计，使用 Java 及开源库 XPage 进行客户端业务逻辑开发。
 
 项目成果：申请到2万元研究经费，已发表论文《大学生时间管理软件的研发与实现》，并已申请《来往人间时间管理软件》软件著作权。
