--- a/docs/保研圈/辅导全流程/院校通知2025.md
+++ b/docs/保研圈/辅导全流程/院校通知2025.md
@@ -4,11 +4,15 @@ slug: yuan-xiao-tong-zhi-2025
 cover: https://api.7trees.cn/img
 categories:
   - 保研
-tags: 
+tags:
+  - 保研辅导
+  - 保研辅导/院校通知
 halo:
   site: http://119.3.239.131:8080
   name: e5610496-5a3d-4a26-ad7d-4bf26c2d9996
   publish: false
+NotionID-cloudinwind: 17501505-cfbe-81c7-a8e3-f7d7ec54db1e
+link-cloudinwind: https://cloudinwind.notion.site/2025-17501505cfbe81c7a8e3f7d7ec54db1e
 ---
 
 ## 院校
