--- a/docs/一些diy/服务器中添加图标.md
+++ b/docs/一些diy/服务器中添加图标.md
@@ -3,13 +3,13 @@ title: 服务器中添加图标
 slug: fu-wu-qi-zhong-tian-jia-tu-biao
 cover: https://pic.imgdb.cn/item/66cd699bd9c307b7e9b541f1.png
 categories:
-  - 环境部署
+  - 工作
 tags:
   - 服务器
 halo:
-  site: http://119.3.239.131:8080
-  name: e88f4c5e-7b64-4bfd-97a1-b4ef53085d93
-  publish: true
+  site: http://162.14.74.139:8080
+  name: 175705e0-35a7-4244-b803-361fe6df7269
+  publish: false
 ---
 在 `/usr/share/applications` 中进行添加，每一个程序创建一个 `xx.desktop`
 
