--- a/docs/一些diy/环境配置全过程.md
+++ b/docs/一些diy/环境配置全过程.md
@@ -3,14 +3,14 @@ title: 环境配置全过程
 slug: huan-jing-pei-zhi
 cover: https://gcore.jsdelivr.net/gh/cloudinwind/images@main/markdown_images/20240825121254714.webp
 categories:
-  - 环境部署
+  - 工作
 tags:
   - 环境部署
   - 服务器
 halo:
-  site: http://119.3.239.131:8080
-  name: f6cd28b2-a4c1-4cf2-b5a5-f8f2ebcb35fa
-  publish: true
+  site: http://162.14.74.139:8080
+  name: cab0c315-1c9a-4cc3-a0ed-668c4c8539aa
+  publish: false
 ---
 # 1. Proxifier
 
